fix contrast and other a11y issues

--- a/docs/prism.css
+++ b/docs/prism.css
@@ -76,11 +76,11 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: slategray;
+	color: #586572;
 }
 
 .token.punctuation {
-	color: #999;
+	color: #6a6a6a;
 }
 
 .token.namespace {
@@ -103,7 +103,7 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-	color: #690;
+	color: #517900;
 }
 
 .token.operator,
@@ -111,20 +111,18 @@ pre[class*="language-"] {
 .token.url,
 .language-css .token.string,
 .style .token.string {
-	color: #9a6e3a;
-	/* This background color was intended by the author of this theme. */
-	background: hsla(0, 0%, 100%, 0.5);
+	color: #7a572e;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-	color: #07a;
+	color: #006590;
 }
 
 .token.function,
 .token.class-name {
-	color: #dd4a68;
+	color: #d3274a;
 }
 
 .token.regex,
